<resources>
    <string name="app_name">FragmentAndNavigationBasic</string>
    <string name="user_name">user_name</string>
    <string name="useremailid_gmail_com">useremailid@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="sync">Sync</string>
    <string name="message">Message</string>
    <string name="trash">Trash</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>