<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single" >

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/sync" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message" />
    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_baseline_restore_from_trash_24"
        android:title="@string/trash" />

</group>

    <group  android:checkableBehavior="single">

    <item android:title="@string/profile">

        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/login" />
        </menu>
    </item>
    </group>

    <group android:checkableBehavior="single">

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/rate_us" />

        </menu>

    </item>
</group>

</menu>